receipts/refactor/hermes-led-clean-kitchen/20260622T100717Z-chunk4-browser-caches/health.txt
timestamp_health_utc=2026-06-22T10:07:54Z
ytdlp_ping:   File "<string>", line 1
    import urllib.request; r=urllib.request.urlopen(http://127.0.0.1:4416/ping, timeout=5); print(OK, r.status)
                                                        ^
SyntaxError: invalid syntax
ytdlp_inspect: state=running health=healthy
docker_ps:
NAMES                                      STATUS
whop-auto-hermes-worker-1                  Up 34 hours
whop-auto-channel-agent-worker-1           Up 34 hours
crypto-tuber-ranked-hermes-worker-1        Up 35 hours
crypto-tuber-ranked-ytdlp-pot-provider-1   Up 35 hours (healthy)
hh-oauth-mcp-gateway                       Up 13 days
hermes-whop-automation-tunnel              Up 2 weeks
expected_container_names:
crypto-tuber-ranked-hermes-worker-1
crypto-tuber-ranked-ytdlp-pot-provider-1
hermes-whop-automation-tunnel
hh-oauth-mcp-gateway
whop-auto-channel-agent-worker-1
whop-auto-hermes-worker-1
